Fix the legacy-flexbox-invisible-float-bug demo on old android

--- a/app/demos/legacy-flexbox-invisible-float-bug/scss/style.scss
+++ b/app/demos/legacy-flexbox-invisible-float-bug/scss/style.scss
@@ -35,7 +35,7 @@
 }
 
 .fix-toggle {
-  position: fixed;
+  position: absolute;
   top: 0;
   left: 0;
   padding: 0.3em 0.5em;
